# model-hub

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
llm_gateway/: __init__.py  cli.py  config.py  exceptions.py  server.py
llm_gateway/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
llm_gateway/controller/: __init__.py  circuit_breaker.py  health.py  models.py  registry.py  router.py  server.py
llm_gateway/models/: __init__.py
llm_gateway/worker/: __init__.py  proxy.py  registration.py  server.py
tests/: conftest.py  test_adapters.py  test_config.py  test_exceptions.py  test_models.py  test_server.py
tests/controller/: test_circuit_breaker.py  test_registry.py  test_router.py
tests/worker/: test_registration.py
